=== HEAD

* Recognize additional unique constraint violations on SQLite (jeremyevans) (#782)

* Don't remove column value when validating nested attributes for one_to_* association where association foreign key is the model's primary key (jeremyevans)

* Add Dataset#disable_insert_returning on PostgreSQL for skipping implicit use of RETURNING (jeremyevans)

* Automatically optimize Model.[], .with_pk, and .with_pk! for models with composite keys (jeremyevans)

* Automatically optimize Model.[] when called with a hash (jeremyevans)

* Automatically optimize Model.find, .first, and .first! when called with a single argument (jeremyevans)

* Add Model.finder for creating optimized finder methods using Dataset::PlaceholderLiteralizer (jeremyevans)

* Add Dataset::PlaceholderLiteralizer optimization framework (jeremyevans)

* Add Dataset#with_sql_{each,all,first,single_value,insert,update} optimized methods (jeremyevans)

* Make pg_array extension use correct type when typecasting column values for smallint, oid, real, character, and varchar arrays (jeremyevans)

* Make Database#column_schema_to_ruby_default a public method in the schema_dumper extension (jeremyevans) (#776)

* Fix multiple corner cases in the eager_graph support (jeremyevans) (#771)

* Use streaming to implement paging for Dataset#paged_each in the mysql2 adapter (jeremyevans)

* Use a cursor to implement paging for Dataset#paged_each in the postgres adapter (jeremyevans)

* Add Database#create_join_table? and #create_join_table! for consistency (jeremyevans)

* Add Dataset#where_current_of to the postgres adapter for supporting updating rows based on a cursor's current position (jeremyevans)

* Add Dataset#use_cursor :hold option in the postgres adapter for supporting cursor use outside of a transaction (jeremyevans)

* Add Dataset#paged_each :strategy=>:filter option for increased performance (jeremyevans)

=== 4.8.0 (2014-03-01)

* Add SQL::AliasedExpression#alias alias for #aliaz (jeremyevans)
